--- a/src/components/Categories/index.scss
+++ b/src/components/Categories/index.scss
@@ -4,7 +4,7 @@
     gap: 20px;
     padding: 20px;
     background-color: #e9f2f9; /* Light blue background */
-
+    
     .category-card {
         flex: 1;
         max-width: calc(25% - 20px);
@@ -12,7 +12,7 @@
         border-radius: 15px;
         overflow: hidden;
         transition: transform 0.2s;
-
+        cursor: pointer;
         &:hover {
             transform: scale(1.05);
         }
