--- a/src/App.css
+++ b/src/App.css
@@ -73,3 +73,9 @@
   display: flex;align-items: center;
   justify-content: center;
 }
+
+.cartCard img {
+  height: 200px;
+  object-fit: contain;
+  padding: 10px 0;
+}
