--- a/src/components/Product/index.scss
+++ b/src/components/Product/index.scss
@@ -78,6 +78,12 @@
   .productLink {
     all:unset;
     cursor: pointer;
+    display: block;
+    height: 100%;
+    .card {
+        height: 100%;
+    }
+
   }
 
 
